--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
-
+.main{
+	width:200px;
+	background-color:purple;
+	border-left:5px solid green;
+	
+}
+.heading{
+	color:white;
+	font-size:20px;
+	padding:10px;
+	text-decoration:underline;
+}
 /* Your CSS Code here. */
