--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,15 @@
 .main{
 	width:200px;
 	background-color:purple;
+	padding:10px;
+	font-size:20px;
 	border-left:5px solid green;
 	
 }
 .heading{
 	color:white;
 	font-size:20px;
-	padding:10px;
+
 	text-decoration:underline;
 }
 /* Your CSS Code here. */
